objects/EmployeeSkill__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Time__c</fullName>
        <label>Assigned Time</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>EmployeeSkills</relationshipLabel>
        <relationshipName>EmployeeSkills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>EmployeeSkills</relationshipLabel>
        <relationshipName>EmployeeSkills</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>EmployeeSkill</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employe Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EmployeeSkills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>